# eels-analysis

./: .travis.yml  CHANGES.rst  CurveFitting.py  CurveFittingAndAnalysis.py  EELS edge table.txt  EELS_AnalysisInterfaceForNion.py  EELS_CrossSections.py  EELS_DataAnalysis.py  EELS_EdgeIdentification.py  Library.py  PeriodicTable.py  README.md  README.rst  UI.py  __init__.py  meta.yaml  mypy.ini  partial_cross_section_test.py  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python-package.yml
PlugIns/EELS/: Functions.py  UI.py
PlugIns/EELS/test/: Function_test.py
extra/: core_loss_edge_test.py  relative_atomic_abundance_test.py
nion/eels_analysis/: BackgroundModel.py  CurveFitting.py  CurveFittingAndAnalysis.py  EELS_CrossSections.py  EELS_DataAnalysis.py  EELS_EdgeIdentification.py  PeakModel.py  PeriodicTable.py  ZLP_Analysis.py  ZLP_analysis.py  eels_analysis.py
nion/eels_analysis/test/: CoreLossEdge_test.py  EELSAnalysisFunctions_test.py  FEFFCrossSections_test.py  PeriodicTable_test.py  ZLP_analysis_test.py
nionswift_plugin/nion_eels_analysis/: AlignMultiSI.py  AlignZLP.py  BackgroundSubtraction.py  ElementalMappingController.py  ElementalMappingPanel.py  Functions.py  LiveThickness.py  LiveZLP.py  PeakFitting.py  Thermometry.py  ThicknessMap.py  UI.py  __init__.py
nionswift_plugin/nion_eels_analysis/resources/color_maps/: sqe_bgyw.xml
nionswift_plugin/nion_eels_analysis/test/: AlignZLP_test.py  Analysis_test.py  BackgroundSubtraction_test.py  ElementalMapping_test.py  Function_test.py  PeakFitting_test.py
resources/: edges.json
test/: CoreLossEdge_test.py  Library_test.py
