[metadata]
name = nionswift-eels-analysis
version = 0.5.2
author = Nion Software
author_email = swift@nion.com
description = Library and UI for doing EELS analysis with Nion Swift.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/eels-analysis
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
python_requires = ~=3.7
install_requires =
    nionswift>=0.15.0,<0.16.0
tests_require =
    nionswift
    nionswift-io
    numpy==1.19.3

[options.package_data]
nion.eels_analysis =
    resources/*

[options.packages.find]
include =
    nion
    nion.eels_analysis
    nion.eels_analysis.test
    nionswift_plugin
    nionswift_plugin.nion_eels_analysis
    nionswift_plugin.nion_eels_analysis.test
